# ai-gtm-case-study

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
gtm-casegen/: .gitignore  pyproject.toml
gtm-casegen/examples/: case.yaml
gtm-casegen/src/gtm_casegen/: __init__.py  __main__.py  cli.py
gtm-casegen/src/gtm_casegen/templates/: case.md.j2
gtm-casegen/tests/: test_smoke.py
